<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="wrap_content"
            android:layout_height="295dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@color/C_E6EBEF" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivPetal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:srcCompat="@drawable/ic_petal_signal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_title_signal_tab"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_20"
                    app:fontFamily="@font/merriweather_bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/img_background_signal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnEditVoice"
                    android:layout_width="@dimen/dp_110"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_50"
                    android:background="@drawable/signal_bg_button_change"
                    android:drawableStart="@drawable/ic_edit"
                    android:drawablePadding="10dp"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingEnd="@dimen/dp_20"
                    android:text="@string/text_title_button_edit"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/gtwalsheimpro_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/dp_30"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleCurrentSignal" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:background="@drawable/ic_logo_signal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitleCurrentSignal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/where_is_my_phone_with_signal_example"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    app:fontFamily="@font/gtwalsheimpro_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleHeaderSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center"
                app:fontFamily="@font/merriweather_bold"
                android:text="@string/text_title_signal_tab_sound_response"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerSignal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/dp_325"
                android:layout_height="@dimen/dp_200"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@drawable/img_background_sound_response">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnChangeVoice"
                    android:layout_width="@dimen/dp_110"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_50"
                    android:layout_marginBottom="@dimen/dp_30"
                    android:background="@drawable/signal_bg_button_change"
                    android:gravity="center"
                    android:text="@string/text_title_button_change"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/gtwalsheimpro_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/viewStartVoice"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_15"
                    android:visibility="invisible"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:background="@drawable/ic_pause_voice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitleSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_20"
                    android:text="@string/text_title_sound_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"
                    app:fontFamily="@font/gtwalsheimpro_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>
</ScrollView>