<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/rlStep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:gravity="center"
            android:text="@string/text_introduce_title_btn_skip"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNext"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginEnd="@dimen/dp_40"
            android:background="@drawable/bg_ring_next_step"
            android:gravity="center"
            android:text="@string/text_introduce_title_btn_next"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnStart"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/signal_bg_button_change"
            android:gravity="center"
            android:text="@string/text_introduce_title_btn_start"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/rlStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStep1"
                android:layout_width="@dimen/dp_10"
                android:layout_height="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@drawable/dot_step_general" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/viewLine1"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@drawable/line_step_general" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStep2"
                android:layout_width="@dimen/dp_10"
                android:layout_height="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@drawable/dot_step_general" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/viewLine2"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@drawable/line_step_general" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStep3"
                android:layout_width="@dimen/dp_10"
                android:layout_height="@dimen/dp_10"
                android:background="@drawable/dot_step_general" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>