<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/C_E6EBEF">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/language"
            android:textColor="@color/C_8397AF"
            android:textSize="@dimen/sp_16"
            app:fontFamily="@font/gtwalsheimpro_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_20"
            android:fontFamily="@font/gtwalsheimpro_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLanguage"
            app:ms_background_selector="@drawable/setting_bg_spinner"
            app:ms_text_color="@color/colorPrimary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clRingtone"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_120"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/setting_bg_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRingtone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_ringtone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/ringtone_level"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_18"
                app:fontFamily="@font/gtwalsheimpro_500"
                app:layout_constraintBottom_toBottomOf="@id/ivRingtone"
                app:layout_constraintLeft_toRightOf="@id/ivRingtone"
                app:layout_constraintTop_toTopOf="@id/ivRingtone" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderRingtone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:splitTrack="false"
                android:valueFrom="0"
                android:valueTo="30"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivRingtone"
                app:thumbRadius="@dimen/dp_10"
                app:thumbStrokeColor="@android:color/white"
                app:thumbStrokeWidth="@dimen/dp_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clVibration"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_120"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/setting_bg_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clRingtone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_vibration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/vibration_intensity"
                android:fontFamily="@font/gtwalsheimpro_500"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="@id/ivVibration"
                app:layout_constraintLeft_toRightOf="@id/ivVibration"
                app:layout_constraintTop_toTopOf="@id/ivVibration" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderVibration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:splitTrack="false"
                android:value="30"
                android:valueFrom="1"
                android:valueTo="255"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivVibration"
                app:thumbRadius="@dimen/dp_10"
                app:thumbStrokeColor="@android:color/white"
                app:thumbStrokeWidth="@dimen/dp_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/clAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clVibration">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@string/about_us"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                app:fontFamily="@font/merriweather_bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                app:srcCompat="@drawable/ic_where" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPetal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_35"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clAboutUs"
            app:srcCompat="@drawable/ic_petal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
